@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Rework edge TikZ code generation. Add table.map().
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Store node edges in an array instead of a dictionary.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
